# Coleccion_ejercicios_excepciones_Pablo_Alcolea

./: CMakeLists.txt  README.md
Ej_1/: main.cpp
Ej_2/: main.cpp
Ej_3/: main.cpp
Ej_4/: main.cpp
Ej_5/: main.cpp
Ej_6/: main.cpp
Ej_7/: main.cpp
