cmake_minimum_required(VERSION 3.29)
project(Coleccion_ejercicios_excepciones_Pablo_Alcolea)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio_1
    "Ej_1/main.cpp")
add_executable(Ejercicio_2
    "Ej_2/main.cpp")
add_executable(Ejercicio_3
    "Ej_3/main.cpp")
add_executable(Ejercicio_4
    "Ej_4/main.cpp")
add_executable(Ejercicio_5
    "Ej_5/main.cpp")
add_executable(Ejercicio_6
    "Ej_6/main.cpp")
add_executable(Ejercicio_7
    "Ej_7/main.cpp")